--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-oauth/google": "^0.12.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.19.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.522.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -24,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
