--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.10",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-preset-links": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
