--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "socket.io-client": "^4.8.1",
